[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI.gd" type="Script" id=1]
[ext_resource path="res://Fonts/ConquistadormanNF.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 48
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 48
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="UI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Score" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1

[node name="Message" type="Label" parent="."]
anchor_right = 1.0
margin_top = 50.2924
margin_bottom = 112.292
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.266667, 1, 0, 1 )
text = "Event: Bird Attack!"
align = 1

[node name="Start" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -82.0
margin_top = -157.0
margin_right = 83.0
margin_bottom = -89.0
custom_fonts/font = SubResource( 2 )
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
